--- a/index.html
+++ b/index.html
@@ -2,267 +2,214 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>เว็บดาวน์โหลดไฟล์</title>
+  <title>📘 ระบบดาวน์โหลดไฟล์การเรียน</title>
   <style>
     body {
       font-family: "Segoe UI", Tahoma, sans-serif;
-      background: #f0f2f5;
       margin: 0;
-      padding: 0;
+      background: #f4f6f9;
+      color: #333;
     }
     header {
-      background: #3498db;
-      color: white;
-      padding: 15px;
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      padding: 20px;
       text-align: center;
-      font-size: 22px;
+      color: #fff;
+      font-size: 24px;
       font-weight: bold;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .login-btn {
-      background: #2ecc71;
-      border: none;
-      color: white;
-      padding: 8px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .login-btn:hover {
-      background: #27ae60;
-    }
-    .logout-btn {
-      background: #e74c3c;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
     .container {
-      max-width: 900px;
-      margin: 20px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      max-width: 1100px;
+      margin: auto;
+      padding: 30px 20px;
     }
-    h2 { margin-top: 0; }
-    select, input, button, textarea {
+    .select-box {
+      margin-bottom: 30px;
+    }
+    select {
+      width: 100%;
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 25px;
+    }
+    .card {
+      background: #fff;
+      border-radius: 15px;
+      padding: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      transition: transform 0.2s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card h3 {
+      margin: 0 0 15px;
+      font-size: 18px;
+      color: #2c3e50;
+    }
+    .btn {
+      display: inline-block;
+      padding: 10px 15px;
+      background: linear-gradient(135deg, #3498db, #9b59b6);
+      color: #fff;
+      border-radius: 8px;
+      text-decoration: none;
+      text-align: center;
+      font-size: 14px;
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+    .btn:hover { opacity: 0.9; }
+    .comments {
+      margin-top: 10px;
+      border-top: 1px solid #eee;
+      padding-top: 10px;
+    }
+    .comments h4 {
+      margin: 5px 0 10px;
+      font-size: 14px;
+      color: #555;
+    }
+    .comment-list {
+      max-height: 120px;
+      overflow-y: auto;
+      margin-bottom: 10px;
+    }
+    .comment {
+      background: #f0f2f5;
+      padding: 6px 10px;
+      border-radius: 6px;
+      margin-bottom: 6px;
+      font-size: 14px;
+    }
+    .comment-input {
+      display: flex;
+      gap: 10px;
+    }
+    .comment-input input {
+      flex: 1;
       padding: 8px;
       border-radius: 6px;
       border: 1px solid #ccc;
-      margin: 5px 0;
     }
-    button {
-      background: #3498db;
-      color: white;
+    .comment-input button {
+      padding: 8px 12px;
       border: none;
+      border-radius: 6px;
+      background: #27ae60;
+      color: white;
       cursor: pointer;
     }
-    button:hover { background: #2980b9; }
-    .file-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-      gap: 10px;
-    }
-    .file-card {
-      padding: 12px;
-      background: #f9f9f9;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      text-align: center;
-    }
-    .file-card a {
-      text-decoration: none;
-      color: #3498db;
-      font-weight: bold;
-    }
-    .comment-section { margin-top: 30px; }
-    .comment {
-      background: #f7f7f7;
-      border-radius: 8px;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ddd;
-    }
-    .comment .author { font-weight: bold; margin-bottom: 5px; }
-    .admin-reply {
-      background: #eaf4ff;
-      border-left: 4px solid #3498db;
-      margin-top: 5px;
-      padding: 8px;
-      border-radius: 6px;
-    }
-    .admin-panel {
-      margin-top: 40px;
-      padding: 15px;
-      background: #f1f8ff;
-      border: 1px solid #3498db;
-      border-radius: 8px;
-      display: none;
-    }
-    .admin-panel h3 { margin-top: 0; color: #3498db; }
-    .admin-actions button {
-      margin-right: 5px;
-      background: #e74c3c;
-    }
-    .admin-actions button:hover { background: #c0392b; }
+    .comment-input button:hover { background: #219150; }
   </style>
 </head>
 <body>
-  <header>
-    📘 เว็บดาวน์โหลดไฟล์การเรียน
-    <button id="loginBtn" class="login-btn">เข้าสู่ระบบแอดมิน</button>
-  </header>
-
+  <header>📘 ระบบดาวน์โหลดไฟล์การเรียน</header>
   <div class="container">
-    <h2>เลือกวิชา</h2>
-    <select id="subject"></select>
-    <div id="files" class="file-list"></div>
-
-    <!-- คอมเมนต์ -->
-    <div class="comment-section">
-      <h2>💬 ความคิดเห็น</h2>
-      <textarea id="commentInput" rows="3" placeholder="เขียนความคิดเห็น..."></textarea><br>
-      <button onclick="addComment()">ส่งความคิดเห็น</button>
-      <div id="commentList"></div>
+    <div class="select-box">
+      <label for="subject">เลือกวิชา:</label>
+      <select id="subject">
+        <option value="">-- กรุณาเลือกวิชา --</option>
+        <option value="math">📐 คณิตศาสตร์</option>
+        <option value="physics">🔬 ฟิสิกส์</option>
+        <option value="chemistry">⚗️ เคมี</option>
+      </select>
     </div>
 
-    <!-- เมนูแอดมิน -->
-    <div class="admin-panel" id="adminPanel">
-      <h3>👨‍💻 เมนูแอดมิน</h3>
-      <input type="text" id="newSubject" placeholder="เพิ่มวิชาใหม่">
-      <button onclick="addSubject()">เพิ่มวิชา</button>
-    </div>
+    <div id="files" class="grid"></div>
   </div>
 
   <script>
-    // --- ข้อมูลพื้นฐาน ---
-    let subjects = JSON.parse(localStorage.getItem("subjects")) || {
-      math: { name: "คณิตศาสตร์", files: [
-        { name: "สมการพื้นฐาน.pdf", url: "files/math-basic.pdf" }
-      ]},
-      physics: { name: "ฟิสิกส์", files: [
-        { name: "กลศาสตร์.pdf", url: "files/mechanics.pdf" }
-      ]}
+    // ไฟล์ตัวอย่างแต่ละวิชา
+    const fileData = {
+      math: [
+        { name: "สมการพื้นฐาน.pdf", url: "files/math-basic.pdf" },
+        { name: "โจทย์คณิต ม.6.docx", url: "files/math-exercise.docx" }
+      ],
+      physics: [
+        { name: "กลศาสตร์.pdf", url: "files/mechanics.pdf" },
+        { name: "ไฟฟ้าและแม่เหล็ก.zip", url: "files/electricity.zip" }
+      ],
+      chemistry: [
+        { name: "เคมีอินทรีย์.pdf", url: "files/organic.pdf" },
+        { name: "สรุปเคมี.docx", url: "files/chem-summary.docx" }
+      ]
     };
-    let comments = JSON.parse(localStorage.getItem("comments")) || [];
-    let isAdmin = false;
 
+    // โหลด/บันทึกคอมเมนต์จาก LocalStorage
+    function loadComments() {
+      return JSON.parse(localStorage.getItem("comments")) || {};
+    }
+    function saveComments(comments) {
+      localStorage.setItem("comments", JSON.stringify(comments));
+    }
+
+    let commentsData = loadComments();
     const subjectSelect = document.getElementById("subject");
     const filesDiv = document.getElementById("files");
-    const commentList = document.getElementById("commentList");
-    const adminPanel = document.getElementById("adminPanel");
-    const loginBtn = document.getElementById("loginBtn");
-
-    // --- ฟังก์ชันแสดงวิชา ---
-    function renderSubjects() {
-      subjectSelect.innerHTML = `<option value="">-- กรุณาเลือกวิชา --</option>`;
-      for (let key in subjects) {
-        subjectSelect.innerHTML += `<option value="${key}">${subjects[key].name}</option>`;
-      }
-      localStorage.setItem("subjects", JSON.stringify(subjects));
-    }
 
     subjectSelect.addEventListener("change", () => {
       const subject = subjectSelect.value;
       filesDiv.innerHTML = "";
-      if (subjects[subject]) {
-        subjects[subject].files.forEach(file => {
-          const div = document.createElement("div");
-          div.className = "file-card";
-          div.innerHTML = `<a href="${file.url}" download>${file.name}</a>`;
-          filesDiv.appendChild(div);
-        });
-      }
-    });
 
-    // --- จัดการคอมเมนต์ ---
-    function addComment() {
-      const text = document.getElementById("commentInput").value.trim();
-      if (!text) return;
-      comments.push({ text, replies: [] });
-      localStorage.setItem("comments", JSON.stringify(comments));
-      document.getElementById("commentInput").value = "";
-      renderComments();
-    }
-
-    function replyComment(index) {
-      if (!isAdmin) return;
-      const reply = prompt("พิมพ์ข้อความตอบกลับ:");
-      if (reply) {
-        comments[index].replies.push({ author: "Admin", text: reply });
-        localStorage.setItem("comments", JSON.stringify(comments));
-        renderComments();
-      }
-    }
-
-    function deleteComment(index) {
-      if (!isAdmin) return;
-      if (confirm("ต้องการลบความคิดเห็นนี้หรือไม่?")) {
-        comments.splice(index, 1);
-        localStorage.setItem("comments", JSON.stringify(comments));
-        renderComments();
-      }
-    }
-
-    function renderComments() {
-      commentList.innerHTML = "";
-      comments.forEach((c, i) => {
-        const div = document.createElement("div");
-        div.className = "comment";
-        div.innerHTML = `
-          <div class="author">ผู้ใช้</div>
-          <div>${c.text}</div>
-        `;
-        if (isAdmin) {
-          div.innerHTML += `
-            <div class="admin-actions">
-              <button onclick="deleteComment(${i})">ลบ</button>
-              <button onclick="replyComment(${i})">ตอบกลับ</button>
+      if (fileData[subject]) {
+        fileData[subject].forEach((file, index) => {
+          const key = `${subject}-${index}`;
+          const card = document.createElement("div");
+          card.className = "card";
+          card.innerHTML = `
+            <h3>${file.name}</h3>
+            <a class="btn" href="${file.url}" download>⬇ ดาวน์โหลด</a>
+            <div class="comments">
+              <h4>💬 ความคิดเห็น</h4>
+              <div class="comment-list" id="comments-${key}"></div>
+              <div class="comment-input">
+                <input type="text" id="input-${key}" placeholder="พิมพ์ข้อความ...">
+                <button onclick="addComment('${key}')">ส่ง</button>
+              </div>
             </div>
           `;
-        }
-        c.replies.forEach(r => {
-          div.innerHTML += `<div class="admin-reply"><b>${r.author}:</b> ${r.text}</div>`;
-        });
-        commentList.appendChild(div);
-      });
-    }
+          filesDiv.appendChild(card);
 
-    // --- จัดการแอดมิน ---
-    loginBtn.addEventListener("click", () => {
-      if (!isAdmin) {
-        const pass = prompt("กรอกรหัสผ่านแอดมิน:");
-        if (pass === "1234") {
-          isAdmin = true;
-          adminPanel.style.display = "block";
-          loginBtn.textContent = "ออกจากระบบ";
-          loginBtn.classList.add("logout-btn");
-        } else {
-          alert("รหัสผ่านไม่ถูกต้อง");
-        }
-      } else {
-        isAdmin = false;
-        adminPanel.style.display = "none";
-        loginBtn.textContent = "เข้าสู่ระบบแอดมิน";
-        loginBtn.classList.remove("logout-btn");
+          // แสดงคอมเมนต์เก่า
+          const list = document.getElementById(`comments-${key}`);
+          (commentsData[key] || []).forEach(text => {
+            const div = document.createElement("div");
+            div.className = "comment";
+            div.textContent = text;
+            list.appendChild(div);
+          });
+        });
       }
-      renderComments();
     });
 
-    function addSubject() {
-      const newSub = document.getElementById("newSubject").value.trim();
-      if (!newSub) return;
-      const key = newSub.toLowerCase().replace(/\s+/g, "_");
-      if (!subjects[key]) {
-        subjects[key] = { name: newSub, files: [] };
-        localStorage.setItem("subjects", JSON.stringify(subjects));
-        renderSubjects();
-        document.getElementById("newSubject").value = "";
+    function addComment(key) {
+      const input = document.getElementById(`input-${key}`);
+      const list = document.getElementById(`comments-${key}`);
+      if (input.value.trim() !== "") {
+        const div = document.createElement("div");
+        div.className = "comment";
+        div.textContent = input.value;
+        list.appendChild(div);
+
+        // อัปเดต LocalStorage
+        if (!commentsData[key]) commentsData[key] = [];
+        commentsData[key].push(input.value);
+        saveComments(commentsData);
+
+        input.value = "";
       }
     }
-
-    // --- เริ่มต้น ---
-    renderSubjects();
-    renderComments();
   </script>
 </body>
 </html>
